# sdl_pedal

./: CMakeLists.txt  README.md  buttons.txt
src/: button.cpp  button.h  config.h  events.cpp  events.h  main.cpp  midi.cpp  midi.h  nav.cpp  nav.h  slider.cpp  slider.h
